--- a/src/layouts/rootLayout/rootLayout.css
+++ b/src/layouts/rootLayout/rootLayout.css
@@ -1,30 +1,40 @@
-.rootLayout{
-    padding: 16px 64px:
+.rootLayout {
+    padding: 16px 64px;
     height: 100vh;
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
+}
 
-    header{
-        display:flex;
-        align-items:center;
-        justify-content:space-between;
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
 
-        .logo{
-            display:flex;
-            align-items:center;
-            font-weight:bold;
-            gap: 8px;
-        }
-
-        img{
-            width:32px;
-            height:32px;
-        }
+    .logo {
+        display: flex;
+        align-items: center;
+        font-weight: bold;
+        gap: 16px; /* This creates space between the image and the text */
     }
-    main{
-        /* background-color: aqua; */
-        flex:1;
-        overflow:hidden;
 
+    img {
+        width: 32px;
+        height: 32px;
     }
+
+    span {
+        font-size: 20px; /* Adjust font size if needed */
+        margin-left: 8px; /* Optional: Add more spacing if needed */
+    }
+
+    .user {
+        margin-left: auto; /* Pushes the user button to the right */
+        padding-right: 2px; /* Adds some padding to the right of the user button */
+    }
+}
+
+main {
+    flex: 1;
+    overflow: hidden;
 }
